[feature] finish backend for export workshop xlsx
