# gestepm-model-api/src/main/java/com/epm/gestepm/modelapi/signings/workshop/dto/filter/WorkshopSigningExportFilterDto.java
@@ -12,4 +12,6 @@ public class WorkshopSigningExportFilterDto {
     private LocalDateTime endDate;
 
     private Integer userId;
+
+    private Integer projectId;
 }
