# gestepm-model/src/main/java/com/epm/gestepm/model/signings/workshop/service/WorkshopExportServiceImpl.java
@@ -4,9 +4,10 @@ package com.epm.gestepm.model.signings.workshop.service;
 import com.epm.gestepm.lib.logging.annotation.EnableExecutionLog;
 import com.epm.gestepm.model.common.excel.ExcelStyles;
 import com.epm.gestepm.model.common.excel.ExcelUtils;
-import com.epm.gestepm.model.project.dao.entity.filter.ProjectFilter;
+import com.epm.gestepm.modelapi.common.utils.Utiles;
 import com.epm.gestepm.modelapi.project.dto.ProjectDto;
 import com.epm.gestepm.modelapi.project.dto.filter.ProjectFilterDto;
+import com.epm.gestepm.modelapi.project.dto.finder.ProjectByIdFinderDto;
 import com.epm.gestepm.modelapi.project.service.ProjectService;
 import com.epm.gestepm.modelapi.signings.warehouse.service.WarehouseSigningService;
 import com.epm.gestepm.modelapi.signings.workshop.dto.WorkShopSigningDto;
@@ -16,6 +17,7 @@ import com.epm.gestepm.modelapi.signings.workshop.exception.WorkshopExportExcept
 import com.epm.gestepm.modelapi.signings.workshop.service.WorkshopExportService;
 import com.epm.gestepm.modelapi.signings.workshop.service.WorkshopSigningService;
 import com.epm.gestepm.modelapi.user.dto.UserDto;
+import com.epm.gestepm.modelapi.user.dto.filter.UserFilterDto;
 import com.epm.gestepm.modelapi.user.dto.finder.UserByIdFinderDto;
 import com.epm.gestepm.modelapi.user.exception.UserNotFoundException;
 import com.epm.gestepm.modelapi.user.service.UserService;
@@ -32,8 +34,10 @@ import org.springframework.stereotype.Service;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.time.format.DateTimeFormatter;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static com.epm.gestepm.lib.logging.constants.LogLayerMarkers.SERVICE;
 
@@ -62,8 +66,34 @@ public class WorkshopExportServiceImpl implements WorkshopExportService {
 
         DateTimeFormatter format = DateTimeFormatter.ISO_DATE_TIME;
 
-        return baseFileName + " " + workshopSigningFilterDto.getStartDate().format(format)
-                + " - " + workshopSigningFilterDto.getEndDate().format(format);
+        final StringBuilder fileName = new StringBuilder(baseFileName);
+
+        if (workshopSigningFilterDto.getUserId() != null)
+        {
+            final UserByIdFinderDto userFinder = new UserByIdFinderDto();
+            userFinder.setId(workshopSigningFilterDto.getUserId());
+
+            final UserDto user = userService.findOrNotFound(userFinder);
+
+            fileName.append(messageSource.getMessage("userId", new Object[0]
+                    , LocaleContextHolder.getLocale())).append(" ").append(user.getFullName());
+        }
+
+        if (workshopSigningFilterDto.getProjectId() != null)
+        {
+            final ProjectByIdFinderDto projectFinder = new ProjectByIdFinderDto();
+            projectFinder.setId(workshopSigningFilterDto.getProjectId());
+
+            final ProjectDto project = projectService.findOrNotFound(projectFinder);
+
+            fileName.append(messageSource.getMessage("project", new Object[0]
+                    , LocaleContextHolder.getLocale())).append(" ").append(project.getName());
+        }
+
+        fileName.append(" ").append(workshopSigningFilterDto.getStartDate().format(format))
+                .append(" - ").append(workshopSigningFilterDto.getEndDate().format(format));
+
+        return fileName.toString();
     }
 
     @Override
@@ -90,7 +120,6 @@ public class WorkshopExportServiceImpl implements WorkshopExportService {
     }
 
     protected void writeFile(final Sheet sheet, final WorkshopSigningExportFilterDto filterDto) {
-        Integer lastUserId = null;
 
         int currentRow = 1;
 
@@ -99,13 +128,13 @@ public class WorkshopExportServiceImpl implements WorkshopExportService {
         if (filterDto.getUserId() != null)
             dto.setUserIds(List.of(filterDto.getUserId()));
 
+        if (filterDto.getProjectId() != null)
+            dto.setProjectIds(List.of(filterDto.getProjectId()));
+
         dto.setStartDate(filterDto.getStartDate());
         dto.setEndDate(filterDto.getEndDate());
 
-        final List<WorkShopSigningDto> workshops = service.list(dto)
-                .stream()
-                .sorted(this::sort)
-                .collect(Collectors.toList());
+        final List<WorkShopSigningDto> workshops = service.list(dto);
 
         final List<Integer> projectIds = workshops
                 .stream()
@@ -116,25 +145,77 @@ public class WorkshopExportServiceImpl implements WorkshopExportService {
         final ProjectFilterDto projectFilter = new ProjectFilterDto();
         projectFilter.setIds(projectIds);
 
-        List<ProjectDto> projects = projectService.list(projectFilter);
+        final List<ProjectDto> projects = projectService.list(projectFilter)
+                .stream()
+                .sorted(Comparator.comparing(ProjectDto::getId))
+                .collect(Collectors.toList());
 
-        for (WorkShopSigningDto workshop: workshops)
+        final List<Integer> userIds = workshops
+                .stream()
+                .map(WorkShopSigningDto::getUserId)
+                .distinct()
+                .collect(Collectors.toList());
+
+        UserFilterDto userFilter = new UserFilterDto();
+        userFilter.setIds(userIds);
+
+        final List<UserDto> users = userService.list(userFilter)
+                .stream()
+                .sorted(Comparator.comparing(UserDto::getFullName))
+                .collect(Collectors.toList());
+
+        for (UserDto user: users)
         {
-            if (!workshop.getUserId().equals(lastUserId))
-            {
-                lastUserId = workshop.getUserId();
-                createUserRow(sheet, lastUserId, currentRow++, projectIds.size());
-                createHeaderRow(sheet, projects, currentRow++);
-            }
+            if (currentRow != 1)
+                ExcelUtils.createRowAsSeparation(sheet, currentRow++, 15);
 
-            currentRow = createWarehouseRow(sheet, workshop.getWarehouseId(), projectIds, currentRow);
+            createUserRow(sheet, user.getId(), currentRow++, projectIds.size() + 2);
+            createHeaderRow(sheet, projects, currentRow++);
+
+            final List<Integer> warehouseIds = workshops
+                    .stream()
+                    .filter(workshop -> workshop.getUserId().equals(user.getId()))
+                    .map(WorkShopSigningDto::getWarehouseId)
+                    .distinct()
+                    .sorted(Integer::compareTo)
+                    .collect(Collectors.toList());
+
+            for (Integer warehouseId: warehouseIds)
+                createWorkshopDetail(sheet, warehouseId, workshops, projects, currentRow++);
         }
+
+        IntStream.rangeClosed(1, projectIds.size() + 2)
+                .forEach(sheet::autoSizeColumn);
     }
 
-    protected int createWarehouseRow(final Sheet sheet, final Integer warehouseId
-            , List<Integer> projectIds, int rowNumber) {
+    protected void createWorkshopDetail(final Sheet sheet, final Integer warehouseId
+            , final List<WorkShopSigningDto> workshops, final List<ProjectDto> projects, int rowNumber) {
 
-        return rowNumber;
+        final Row row = sheet.createRow(rowNumber);
+        row.setHeightInPoints(15);
+
+        ExcelUtils.setCell(row, 1, warehouseId, styles.whiteBorderCenterStyle);
+
+        final List<Long> projectHours = projects
+                .stream()
+                .map(project -> getHoursByProject(warehouseId, project.getId(), workshops))
+                .collect(Collectors.toList());
+
+        IntStream.range(0, projectHours.size())
+                .forEach(i -> ExcelUtils.setCell(row, i + 2, projectHours.get(i), styles.whiteBorderCenterStyle));
+
+        ExcelUtils.setCell(row, projectHours.size() + 2
+                , projectHours.stream().reduce(0L, Long::sum)
+                , styles.whiteBorderCenterStyle);
+    }
+
+    protected long getHoursByProject(final Integer warehouseId, final Integer projectId
+            , final List<WorkShopSigningDto> workshops) {
+        return workshops
+                .stream()
+                .filter(workshop -> workshop.getWarehouseId().equals(warehouseId) && workshop.getProjectId().equals(projectId))
+                .map(workshop -> Utiles.getHours(workshop.getStartedAt(), workshop.getClosedAt()))
+                .reduce(0L, Long::sum);
     }
 
     protected void createHeaderRow(final Sheet sheet, final List<ProjectDto> projects, int rowNumber) {
@@ -145,12 +226,20 @@ public class WorkshopExportServiceImpl implements WorkshopExportService {
         final String warehouseTitle = messageSource.getMessage("warehouse.export.title", new Object[0]
                 , LocaleContextHolder.getLocale());
 
-        final String projectText = messageSource.getMessage("project", new Object[0]
+        final String projectText = messageSource.getMessage("project.export", new Object[0]
                 , LocaleContextHolder.getLocale());
 
         ExcelUtils.setCell(row, 1, warehouseTitle, styles.workshopExportCellStyle);
 
+        IntStream.range(0, projects.size())
+                .forEach(i -> ExcelUtils.setCell(row, i + 2
+                        , projectText + " " + projects.get(i).getId()
+                        , styles.workshopExportCellStyle));
 
+        ExcelUtils.setCell(row, projects.size() + 2
+                , messageSource.getMessage("totalHours.title", new Object[0]
+                        , LocaleContextHolder.getLocale())
+                , styles.dataOrgangeCellStyle);
     }
 
     protected void createUserRow(final Sheet sheet, final Integer userId, int rowNumber, int colNumber) {
@@ -158,7 +247,7 @@ public class WorkshopExportServiceImpl implements WorkshopExportService {
         sheet.addMergedRegion(cell);
 
         final Row userRow = sheet.createRow(rowNumber);
-        userRow.setHeightInPoints((short) 18);
+        userRow.setHeightInPoints(15);
 
         final UserByIdFinderDto userFinder = new UserByIdFinderDto();
         userFinder.setId(userId);
@@ -168,18 +257,5 @@ public class WorkshopExportServiceImpl implements WorkshopExportService {
         final Cell userNameCell = userRow.createCell(1);
         userNameCell.setCellStyle(styles.userTitleStyle);
         userNameCell.setCellValue(user.getFullName());
-    }
-
-    private int sort(WorkShopSigningDto dto1, WorkShopSigningDto dto2) {
-        if (!dto1.getUserId().equals(dto2.getUserId()))
-            return dto1.getUserId().compareTo(dto2.getUserId());
-
-        if (!dto1.getWarehouseId().equals(dto2.getWarehouseId()))
-            return dto1.getWarehouseId().compareTo(dto2.getWarehouseId());
-
-        if (!dto1.getStartedAt().isEqual(dto2.getStartedAt()))
-            return dto1.getStartedAt().compareTo(dto2.getStartedAt());
-
-        return dto1.getClosedAt().compareTo(dto2.getClosedAt());
     }
 }
